Switch on closed sets in validation and metrics, name the daemon factories
Pattern and string switches replace 5 dispatch chains: the 2 well-known-type
dispatchers in ProtoValidator now read the same way, uniqueKey and
QualityScorer.asScore lose their instanceof ladders, LuceneMetricExecutor's
aggregate comparison becomes an arrow switch, and MetricMappings.kindOf calls
getFullName once instead of 2 times.

Two of those had constraints the switch must preserve, and a comment at each
site records them. uniqueKey retains "case null -> null", because a pattern
switch throws on a null selector where the chain returned null, and the calling
code tests for it. asScore puts UnsignedLong ahead of Number, since it extends
Number and only the more specific accessor treats the value as unsigned.

McpHttpHandler.putSession removed the oldest session with an iterator, a next(),
and a separate remove call; pollFirstEntry does it in one step on the same
access-ordered map. Six further sequenced-collection accessors follow the same
form, each after an exact size check.

Stream cleanups remove 2 needless copies: compileRules built a mutable list then
wrapped it, and Rollups copied a toList result that no code mutates.

The 2 threading edits are not virtual-thread conversions. The manual daemon
ThreadFactory lambdas in serve and document-platform become
Thread.ofPlatform().name(...).daemon().factory(), producing the same threads. A
comment at each site explains why platform threads remain correct there: the
single scheduled thread orders config refreshes so 2 pulls cannot overlap, and
JDK 25 has no virtual-thread scheduled executor.

No public API changes; each edited member is private or package-private.